--- a/Views/City/Edit.cshtml
+++ b/Views/City/Edit.cshtml
@@ -1,18 +1,44 @@
-@model TModel
+@model AdressBook.Models.CityModel
 
 @{
-    Layout = null;
+    ViewBag.Title = "Edit City";
 }
 
-<!DOCTYPE html>
+<div class="container">
+    <h2>Edit City</h2>
+    @using (Html.BeginForm("Edit", "City", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.CityId)
 
-<html>
-<head>
-    <title>title</title>
-</head>
-<body>
-<div>
-      
+        <div class="form-group">
+            @Html.LabelFor(model => model.CountryId, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.CountryId, new { @class = "form-control", placeholder = "Enter Country ID" })
+                @Html.ValidationMessageFor(model => model.CountryId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.StateId, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.StateId, new { @class = "form-control", placeholder = "Enter State ID" })
+                @Html.ValidationMessageFor(model => model.StateId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.CityName, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.CityName, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CityName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Update" class="btn btn-primary" />
+            </div>
+        </div>
+    }
 </div>
-</body>
-</html>
