--- a/Views/Country/Edit.cshtml
+++ b/Views/Country/Edit.cshtml
@@ -1,18 +1,38 @@
-@model TModel
+@model AdressBook.Models.CountryModel
 
 @{
-    Layout = null;
+    ViewBag.Title = "Edit Country";
 }
 
-<!DOCTYPE html>
+<div class="container">
+    <h2>Edit Country</h2>
+    @using (Html.BeginForm("Edit", "Country", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.CountryId)
 
-<html>
-<head>
-    <title>title</title>
-</head>
-<body>
-<div>
-      
+        <div class="form-group">
+            @Html.LabelFor(model => model.CountryName, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.CountryName, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CountryName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.CountryCode, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.CountryCode, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CountryCode, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <!-- Additional fields if required -->
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Update" class="btn btn-primary" />
+            </div>
+        </div>
+    }
 </div>
-</body>
-</html>
