--- a/Views/State/Add.cshtml
+++ b/Views/State/Add.cshtml
@@ -1,18 +1,62 @@
-@model TModel
+@model AdressBook.Models.StateModel
 
 @{
-    Layout = null;
+    ViewBag.Title = "Add State";
 }
 
-<!DOCTYPE html>
+<div class="container">
+    <h2>Add State</h2>
+    @using (Html.BeginForm("Add", "State", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
 
-<html>
-<head>
-    <title>title</title>
-</head>
-<body>
-<div>
-      
+        <!-- CountryId might be a dropdown in a real application -->
+        <div class="form-group">
+            @Html.LabelFor(model => model.CountryId, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @* For a dropdown, you can use Html.DropDownListFor *@
+                @Html.TextBoxFor(model => model.CountryId, new { @class = "form-control", placeholder = "Enter Country ID" })
+                @Html.ValidationMessageFor(model => model.CountryId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.StateName, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.StateName, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.StateName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.StateCode, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.StateCode, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.StateCode, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.StdCode, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.StdCode, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.StdCode, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.PinCode, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.PinCode, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.PinCode, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <!-- CreationDate and UserId can be managed automatically or hidden if not editable -->
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
+        </div>
+    }
 </div>
-</body>
-</html>
