--- a/Views/State/Index.cshtml
+++ b/Views/State/Index.cshtml
@@ -1,4 +1,3 @@
-@model TModel
 
 @{
     Layout = null;
@@ -6,7 +5,7 @@
 
 <!DOCTYPE html>
 
-<html>
+<html lang="eng">
 <head>
     <title>title</title>
 </head>
